@@ -536,6 +536,7 @@ David Scherer
 Gregor Schmid
 Ralf Schmitt
 Peter Schneider-Kamp
+Chad J. Schroeder
 Sam Schulenburg
 Stefan Schwarzer
 Dietmar Schwertberger
